feat(ui/header): add hover “pill” effect for nav links (and optional brand)
Introduce header-nav-hover.css to style header nav hovers.

Applies subtle background + rounded “pill” on .nav-link:not(.active) and .nav-link--button.

Adds optional hover style for .brand.

Pure CSS/visual change—no behavioral impact.

--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "jose": "^6.0.13",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.544.0",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^2.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "typescript": "^5"
